--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,21 +1,21 @@
-background            #0e0c15
-foreground            #dbd0b9
-cursor                #bbbbbb
-selection_background  #f3e0b8
-color0                #08002e
-color8                #331d4c
-color1                #64002c
-color9                #cf2062
-color2                #5d731a
-color10               #b3ce58
-color3                #cd751c
-color11               #fac357
-color4                #1d6da1
-color12               #40a4cf
-color5                #b7077e
-color13               #f02aae
-color6                #42a38c
-color14               #62caa8
-color7                #f3e0b8
-color15               #fff5db
-selection_foreground #0e0c15
+background #212733
+foreground #d9d7ce
+cursor #ffcc66
+selection_background #343f4c
+color0 #191e2a
+color8 #686868
+color1 #ed8274
+color9 #f28779
+color2  #a6cc70
+color10 #bae67e
+color3  #fad07b
+color11 #ffd580
+color4  #6dcbfa
+color12 #73d0ff
+color5  #cfbafa
+color13 #d4bfff
+color6  #90e1c6
+color14 #95e6cb
+color7  #c7c7c7
+color15 #ffffff
+selection_foreground #212733
