--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,21 +1,21 @@
-background #212733
-foreground #d9d7ce
-cursor #ffcc66
-selection_background #343f4c
-color0 #191e2a
-color8 #686868
-color1 #ed8274
-color9 #f28779
-color2  #a6cc70
-color10 #bae67e
-color3  #fad07b
-color11 #ffd580
-color4  #6dcbfa
-color12 #73d0ff
-color5  #cfbafa
-color13 #d4bfff
-color6  #90e1c6
-color14 #95e6cb
-color7  #c7c7c7
-color15 #ffffff
-selection_foreground #212733
+background            #282420
+foreground            #e5c6a8
+cursor                #f6f6ec
+selection_background  #111417
+color0                #111417
+color8                #665e54
+color1                #c84134
+color9                #ff6459
+color2                #84c44b
+color10               #97e035
+color3                #f4ae2e
+color11               #dfd561
+color4                #1397b9
+color12               #5ed9ff
+color5                #d0623c
+color13               #ff9168
+color6                #4f9452
+color14               #83ef88
+color7                #e5c5a9
+color15               #f6f6ec
+selection_foreground #282420
