chore: disable upkey binding for atuin and accept the weird gitconfig hooksPath setting

--- a/.gitconfig
+++ b/.gitconfig
@@ -122,6 +122,7 @@
   autocrlf = input
   #pager = diff-so-fancy | less --tabs=4 -RFX
   pager = delta
+	hooksPath = /usr/local/gitconfig/hooks/
 
 [interactive]
   diffFilter = delta --color-only
