--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,5 +1,5 @@
 import = [
-    "~/.config/alacritty/themes/themes/afterglow.toml"
+    "~/.config/alacritty/themes/themes/everforest_dark.toml"
 ]
 live_config_reload = true
 
@@ -8,10 +8,12 @@ args = ['--login']
 program = "/bin/zsh"
 
 [cursor]
-style = "Beam"
+style.shape = "Block"
+style.blinking = "Always"
+
 unfocused_hollow = true
 vi_mode_style = "Block"
-blink_interval = 3
+blink_interval = 800
 
 [font]
 size = 16.0
@@ -31,21 +33,3 @@ y = 0
 #[window.dimensions]
 #columns = 90
 #lines = 25
-
-[colors.normal]
-black = "#21222c"
-red = "#ff5555"
-green = "#50fa7b"
-yellow = "#f1fa8c"
-blue = "#bd93f9"
-magenta = "#ff79c6"
-cyan = "#8be9fd"
-white = "#f8f8f2"
-
-[colors.primary]
-background = "#282a36"
-foreground = "#f8f8f2"
-
-[colors.cursor]
-text = "CellBackground"
-cursor = "CellForeground"
