--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -19,7 +19,7 @@ blink_interval = 800
 size = 16.0
 
 [font.normal]
-family = "Fira Code"
+family = "MesloLGS NF"
 
 [window]
 startup_mode = "Windowed"
