--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@
 #: characters.
 
 #: font_family      Fantasque Sans Mono
-font_family      CommitFont
+font_family      MesloLGS NF
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
