--- a/.gitconfig
+++ b/.gitconfig
@@ -190,6 +190,7 @@
   insteadOf = "gh:"
   pushInsteadOf = "github:"
   pushInsteadOf = "git://github.com/"
+  pushInsteadOf = "https://github.com/"
 
 [url "git://github.com/"]
 
