chore: minor update tmux conf to rempa split window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,10 @@ set-window-option -g automatic-rename on
 set-option -g set-titles on
 
 #set -g default-terminal screen-256color
-set-option -sa terminal-overrides ',XXX:RGB'
+# set-option -sa terminal-overrides ',XXX:RGB'
+# set default terminal mode to 256 colors
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g status-keys vi
 set -g history-limit 10000
@@ -45,8 +48,9 @@ set-option -g mouse on
 # set-option -g mouse-resize-pane on
 setw -g monitor-activity on
 
-bind-key v split-window -h
-bind-key s split-window -v
+# split panes using | and -, make sure they open in the same path
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
@@ -96,6 +100,7 @@ set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 set -g status on
 set -g status-bg black
 set -g status-fg white
+set -g status-style 'fg=colour1'
 set -g status-justify "centre"
 set -g window-status-current-style bg=white,fg=black,bold
 set -g status-interval 60
